# HW_31

./: conftest.py  db.sqlite3  factories.py  pyproject.toml  pytest.ini
HW_27/: settings.py  urls.py
ads/: admin.py  models.py  permissions.py  serializers.py  views.py
ads/management/command/: load_data.py
ads/migrations/: 0001_initial.py  0002_alter_ads_author_alter_ads_category.py  0002_initial.py  0002_location_remove_ads_address_ads_category_ads_image_and_more.py  0003_selection.py  0003_user_age.py  0004_remove_ads_category_ads_category.py  0005_alter_ads_author.py  0006_alter_ads_options_alter_categories_options_and_more.py  0007_alter_ads_image.py
ads/tests/: test_ads.py  test_selections.py
ads/urls/: ads_urls.py  cat_urls.py  selection_urls.py  user_urls.py
data/: ad.json  ads.json  csv_to_json.py  user.json  utils.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
